--- a/EcoTracker/Base.lproj/Main.storyboard
+++ b/EcoTracker/Base.lproj/Main.storyboard
@@ -185,10 +185,10 @@
                                         <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="эко-баллы" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5y-Sm-ZdZ">
-                                        <rect key="frame" x="144.5" y="70" width="86" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="эко-баллов" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5y-Sm-ZdZ">
+                                        <rect key="frame" x="138" y="70" width="99" height="21"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="86" id="Lcm-4D-aUT"/>
+                                            <constraint firstAttribute="width" constant="99" id="Lcm-4D-aUT"/>
                                             <constraint firstAttribute="height" constant="21" id="sV0-Rp-1jK"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -428,7 +428,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qmM-px-P9b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-684.375" y="316.90140845070425"/>
+            <point key="canvasLocation" x="-685.60000000000002" y="316.19190404797604"/>
         </scene>
         <!--Settings-->
         <scene sceneID="y8I-Yz-LN2">
@@ -939,10 +939,10 @@
                                 <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="эко-баллы" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="imr-Uf-exi">
-                                <rect key="frame" x="148" y="101.5" width="78" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="эко-баллов" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="imr-Uf-exi">
+                                <rect key="frame" x="137" y="102" width="100" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="78" id="HtT-EO-qaW"/>
+                                    <constraint firstAttribute="width" constant="100" id="HtT-EO-qaW"/>
                                     <constraint firstAttribute="height" constant="15" id="mg8-QO-f8V"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
